# chaturbox-opt

./: .gitignore  config.yml  pyproject.toml
src/chaturbox_opt/: __init__.py  app.py  app_.py  config.yml
src/chaturbox_opt/chatterbox/: mtl_tts.py
src/chaturbox_opt/chatterbox/models/t3/: t3.py
src/chaturbox_opt/chatterbox/models/t3/modules/: cond_enc.py
src/chaturbox_opt/models/: __init__.py
src/chaturbox_opt/models/t3/: __init__.py  model_.py
src/chaturbox_opt/models/t3/inference/: __init__.py  alignment_stream_analyzer.py
src/chaturbox_opt/models/t3/inference/hf_backend/: __init__.py  hf_backend_.py
src/chaturbox_opt/models/t3/layers/: __init__.py  learned_position_embeddings_.py
src/chaturbox_opt/models/t3/layers/conditional_encoder/: __init__.py  conditional_encoder_.py
src/chaturbox_opt/models/t3/layers/perceiver_/: __init__.py  perceiver_.py
src/chaturbox_opt/models/t3/layers/perceiver_/layers/: __init__.py  attention_.py  relative_position_bias.py
