[project]
name = "chaturbox-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.4.1",
    "librosa>=0.11.0",
    "numpy>=2.4.2",
    "perth>=1.0.0",
    "s3tokenizer>=0.3.0",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.scripts]
chaturbox-opt = "chaturbox_opt.app_:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
